# integrations

./: .gitignore  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: agentrust-codex-tests.yml  claude-code-tests.yml  codeql.yml  contributor-check.yml  ramen-ai-cmcp-conformance.yml  scheduled-agents-tests.yml  scorecard.yml  (+2 more)
claude-code/: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  integration.yaml  requirements.txt
decisionassure/: README.md  da_to_trace.py  integration.yaml  requirements.txt
integrations/ramen-ai-cmcp/: README.md  integration.yaml  pyproject.toml  ramen_ai_trace.py
integrations/ramen-ai-cmcp/examples/: emit_record.py
integrations/ramen-ai-cmcp/examples/fixtures/: vector1_allowed.json  vector_n1_bad_sig.json
integrations/ramen-ai-cmcp/ramen_ai_cmcp_integration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/ramen-ai-cmcp/tests/: test_mapping.py
integrations/spendguard/: README.md  integration.yaml  pyproject.toml  spendguard_trace.py
integrations/spendguard/.github/workflows/: agentrust-conformance.yml
integrations/spendguard/examples/: emit_record.py
integrations/spendguard/examples/fixtures/allow/: build-provenance.json  bundle.json  decision.json  outcome.json  policy-bundle.json  tool-catalog.json
integrations/spendguard/tests/: test_mapping.py
scheduled-agents/: PRIVACY.md  README.md  integration.yaml  requirements.txt
sentinel/: .gitignore  .trace-tests-config.yml  README.md  docker-compose.yml  integration.yaml  requirements.txt
(+105 files in other folders)
